# ArabiMorph

./: .gitignore  ArabiMorph.pro  CMakeLists.txt  LICENSE  Makefile  README.md  arabic_morph.pro  main.cpp  main_cli.cpp  main_qt.cpp  mainhashtable.cpp
.cph/: .main.cpp_60a4810026bd4cf023076378685153db.prob
data/: Data.txt  c.txt
include/: BinarySearchTree.h  MainWindow.h  Node.h  Root.h  TreeVisualizationWidget.h  core_engine.h  hashtable.h
src/: BinarySearchTree.cpp  MainWindow.cpp  Node.cpp  Root.cpp  TreeVisualizationWidget.cpp  core_engine.cpp  hashtable.cpp
